--- a/clightning/install
+++ b/clightning/install
@@ -1,6 +1,8 @@
 #!/bin/bash
 
-cat < EOF | sudo tee /etc/systemd/system/clightningd.service >/dev/null
+set -e
+
+cat << EOF | sudo tee /etc/systemd/system/clightningd.service >/dev/null
 # /etc/systemd/system/clightningd.service
 [Unit]
 Description=Bitcoin node
